# blufizz

./: .astylerc  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  blufizz.code-workspace
doc/: class_diagram.plantuml
src/: BluFizz.cpp  BluFizz.h  Bluetooth_Device.cpp  Bluetooth_Device.h  Bluez_AdapterController.cpp  Bluez_AdapterController.h  Bluez_AdapterManager.cpp  Bluez_AdapterManager.h  Bluez_Dbus.h  Bluez_DeviceClient.cpp  Bluez_DeviceClient.h  Bluez_DeviceConnector.cpp  Bluez_DeviceConnector.h  Bluez_Gatt.h  Bluez_ObjectManager.cpp  Bluez_ObjectManager.h  Database.cpp  Database.h  Device.cpp  Device.h  DevicesManager.cpp  DevicesManager.h  GpsdClient.cpp  GpsdClient.h  IAdapterController.h  IDeviceConnector.h  Service.h  TaskManager.cpp  TaskManager.h  Tools.cpp  Tools.h  main.cpp
